Fix image caption text contrast
This commit changes the colour of caption text to Base Light to provide
more contrast with the dark background.

--- a/src/assets/css/global/blocks/prose.css
+++ b/src/assets/css/global/blocks/prose.css
@@ -10,6 +10,7 @@
 }
 
 .prose figcaption {
+  color: var(--color-base-light);
   font-size: var(--size-step-min-1);
   text-align: center;
   padding-block-end: var(--space-xs);
